# screenshot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: cli.rs  frame_extractor.rs  image_maker.rs  info.rs  main.rs  process.rs  text.rs  utils.rs
