[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

[features]
default = ["window"]
window = ["msgbox"]

[dependencies]
anyhow = "1"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

clap = { version = "4.0.32", features = ["derive"] }

opencv = { version = "=0.54.0", features = ["clang-runtime"] }

filetime = "0.2.19"

msgbox = { version = "0.7.0", optional = true }

[dependencies.ffmpeg-next]
version = "5.1.1"
features = []

[profile.release]
opt-level = 's'
lto = true
debug = false
