[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

default-run = "screenshot"

[[bin]]
name = "sync-image-date"
path = "bin/sync-image-date.rs"

[profile.release]
opt-level = 's'
lto = 'fat'
debug = false

[features]
default = ["window"]
window = ["msgbox"]

[dependencies]
anyhow = "1"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

clap = { version = "4.0.32", features = ["derive"] }
filetime = "0.2.19"
rayon = "1.6.1"

msgbox = { version = "0.7.0", optional = true }

[dependencies.ffmpeg-next]
version = "5.1.1"
default-features = false
features = ["codec", "format", "software-scaling"]

[dependencies.opencv]
version = "0.74.2"
default-features = false
features = ["imgcodecs", "imgproc"]

